unpackaged/main/default/objects/Contact/fields/Contact_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Contact_Zip_Code__c</fullName>
    <label>Contact Zip Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>