unpackaged/main/default/objects/Contact/fields/Contact_ZipCode__c.field-meta.xml
<CustomField>
    <fullName>Contact_ZipCode__c</fullName>
    <label>Contact ZipCode</label>
    <length>25</length>
    <type>Text</type>
</CustomField>