unpackaged/main/default/objects/Contact/fields/Handover_Notes__c.field-meta.xml
<CustomField>
    <fullName>Handover_Notes__c</fullName>
    <label>Handover Notes</label>
    <length>200</length>
    <type>Text</type>
</CustomField>